# landing-page

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  eslint.config.js  eslint.config.mjs  index.html  lp.db  next-sitemap.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  tailwind.config.mjs  vercel.json  vite.config.js  wrangler.toml
app/: config.py  database.py  main.py  models.py
app/routers/: contact.py
src/: App.css  App.jsx  Tokens.css  environment.d.ts  index.css  payload-generated-schema.ts  payload-types.ts  payload.config.ts
src/Footer/: Component.tsx
src/Header/: Component.client.tsx
src/Header/Nav/: index.tsx
src/app/(frontend)/: globals.css  (+3 more)
src/collections/: Media.ts
src/components/: Divider.jsx  FAQ.jsx  Footer.jsx  Hero.jsx  HowWeWork.jsx  Navbar.jsx  OurClient.jsx  OurClients.jsx  OurWorkSpeaksforItself.jsx  StartProject.jsx  Testimonial.jsx  WhatWeDoBest.jsx
src/fields/: mdxField.ts
src/hooks/: lexicalToMdx.ts  mdxToLexical.ts  useIsMobile.ts
src/migrations/: 20250504_083747.json  20250504_083747.ts  index.ts
src/pages/: DetailMugee.jsx  DetailPamaba.jsx  DetailTesUjianOnline.jsx  DetailYourEmailValidator.jsx  HomePage.jsx  ProjectDetail.jsx
src/plugins/: index.ts
src/providers/: ContactProvider.tsx
src/stores/: useFilterStore.ts
src/types/: ContactForm.ts  Portfolio.ts  Store.ts
src/utilities/: generateMeta.ts  generatePreviewPath.ts  getForm.ts  mergeOpenGraph.ts
static/css/: styles.css
static/js/: main.js
templates/: index.html
(+53 files in other folders)
