[project]
name = "nightcoders-landing-page"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.5",
    "jinja2>=3.1.4",
    "motor>=3.6.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "pymongo>=4.9.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "uvicorn>=0.32.0",
]
